# BMU_NEW

./: .gitignore
BMU_NEW/: BMU_NEW.ntfx  CMakeLists.txt  CMakePresets.json  README.md
BMU_NEW/Driver/CMSIS/core/: cmsis_iccarm.h
BMU_NEW/Driver/CMSIS/device/: n32g45x.h  n32g45x_conf.h  system_n32g45x.c  system_n32g45x.h
BMU_NEW/Driver/CMSIS/device/startup/: startup_n32g45x.s  startup_n32g45x_gcc.s
BMU_NEW/Driver/n32g45x_algo_lib/inc/: n32g45x_aes.h  n32g45x_algo_common.h  n32g45x_des.h  n32g45x_hash.h  n32g45x_rng.h
BMU_NEW/Driver/n32g45x_algo_lib/lib/: n32g45x_aes.lib  n32g45x_algo_common.lib  n32g45x_des.lib  n32g45x_hash.lib  n32g45x_rng.lib
BMU_NEW/Driver/n32g45x_std_periph_driver/inc/: misc.h  n32g457_eth.h  n32g45x_adc.h  n32g45x_bkp.h  n32g45x_can.h  n32g45x_comp.h  n32g45x_crc.h  n32g45x_dac.h  n32g45x_dbg.h  n32g45x_dma.h  n32g45x_dvp.h  n32g45x_eth.h  n32g45x_exti.h  n32g45x_flash.h  n32g45x_gpio.h  n32g45x_i2c.h  n32g45x_iwdg.h  n32g45x_opamp.h  n32g45x_pwr.h  n32g45x_qspi.h  n32g45x_rcc.h  n32g45x_rtc.h  n32g45x_sdio.h  n32g45x_spi.h  n32g45x_tim.h  n32g45x_tsc.h  n32g45x_usart.h  n32g45x_wwdg.h  n32xx_tsc_alg_api.h  n32xx_tsc_alg_api.lib
BMU_NEW/Driver/n32g45x_std_periph_driver/src/: misc.c  n32g457_eth.c  n32g45x_adc.c  n32g45x_bkp.c  n32g45x_can.c  n32g45x_comp.c  n32g45x_crc.c  n32g45x_dac.c  n32g45x_dbg.c  n32g45x_dma.c  n32g45x_dvp.c  n32g45x_eth.c  n32g45x_exti.c  n32g45x_flash.c  n32g45x_gpio.c  n32g45x_i2c.c  n32g45x_iwdg.c  n32g45x_opamp.c  n32g45x_pwr.c  n32g45x_qspi.c  n32g45x_rcc.c  n32g45x_rtc.c  n32g45x_sdio.c  n32g45x_spi.c  n32g45x_tim.c  n32g45x_tsc.c  n32g45x_usart.c  n32g45x_wwdg.c
BMU_NEW/Driver/n32g45x_usbfs_driver/inc/: usb_core.h  usb_def.h  usb_init.h  usb_int.h  usb_lib.h  usb_mem.h  usb_regs.h  usb_sil.h  usb_type.h
BMU_NEW/Driver/n32g45x_usbfs_driver/src/: usb_core.c  usb_init.c  usb_int.c  usb_mem.c  usb_regs.c  usb_sil.c
BMU_NEW/MDK-ARM/: BMU_NEW.uvoptx  BMU_NEW.uvprojx  Nations.N32G45x_DFP.1.3.0.pack
BMU_NEW/USER/inc/: main.h  n32g45x_cfg.h  n32g45x_it.h
BMU_NEW/USER/src/: main.c  n32g45x_cfg.c  n32g45x_it.c
BMU_NEW/app/: FreeRTOSConfig.h  bms_app.c  bms_app.h  freertos_app.c  freertos_app.h
BMU_NEW/app/AFE/: mp2797.c  mp2797.h
BMU_NEW/app/CellBalance/: cell_balance.c  cell_balance.h
BMU_NEW/app/Console/: console.c  console.h
BMU_NEW/app/Drivers/: board_pins.h  pc_uart.c  pc_uart.h  rs232.c  rs232.h  soft_i2c.c  soft_i2c.h  syscalls.c
BMU_NEW/cmake/: arm-none-eabi.cmake  n32g455_sdk.cmake  toolchain-arm-none-eabi.cmake
